# CircuitPython_Synthiota

./: README.rst  pyproject.toml  relic_synthiota.py  requirements.txt  synthiota.py
.github/workflows/: release_gh.yml
CircuitPython_Synthiota/: README.rst  synthiota.py
CircuitPython_Synthiota/docs/: examples.rst
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: synthiota_leds.py  synthiota_simpletest.py
